--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -85,8 +85,10 @@ h6 {
 #header .profile img {
   margin: 15px auto;
   display: block;
-  width: 120px;
+  width: 110px;
+  height: 110px;
   border: 8px solid #2c2f3f;
+  object-fit: contain;
 }
 
 #header .profile h1 {
@@ -228,7 +230,7 @@ h6 {
 #hero {
   width: 100%;
   height: 100vh;
-  background: url("../img/hero-bg.jpg") top center;
+  background: url("../img/Boise.jpg") center;
   background-size: cover;
 }
 
@@ -255,6 +257,7 @@ h6 {
   font-weight: 700;
   line-height: 56px;
   color: #fff;
+  text-shadow: wheat 2px 1px;
 }
 
 #hero p {
